compiling on Mac and linux/MKL now, next step is to write readme file and create examples for sparsify

--- a/search/Makefile
+++ b/search/Makefile
@@ -1,13 +1,15 @@
 
 # for compiling on Mac with Accelerate framework
-CC = g++
-INCLUDES =  
-BLAS_LAPACK_LIB = -lblas -llapack
+#CC = g++
+#INCLUDES =  
+#BLAS_LAPACK_LIB = -lblas -llapack
 
 # for compiling with Intel compiler and MKL
-#CC = icc
-#INCLUDES := -I$(MKLROOT)/include -DMKL
-#BLAS_LAPACK_LIB = -L$(MKLROOT)/lib/em64t -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread
+# (to set MKLROOT: run mklvars.sh using command like
+# source /opt/intel/composerxe/mkl/bin/mklvars.sh intel64) 
+CC = icc
+INCLUDES := -I$(MKLROOT)/include 
+BLAS_LAPACK_LIB = -L$(MKLROOT)/lib/em64t -lmkl_intel_lp64 -lmkl_sequential -lmkl_core -lpthread
 
 #DEBUG := -g -O0 -Wall
 OPT := -O3
